# zlib_v1.2.7

./: CMakeLists.txt  OCMS-post.cmake  README.md  config.h.in
cmake_Kelvin/: ProjectSsetting.cmake
install__zlib__VC14_Ver_debug/lib/: zlib.lib  zlibd.lib  zlibstatic.lib  zlibstaticd.lib
install__zlib__VC14_Ver_debug/lib/cmake/zlib/: zlibConfig-debug.cmake  zlibConfig.cmake  zlibConfigVersion.cmake
install__zlib__VC14_Ver_debug/share/pkgconfig/: zlib.pc
